--- a/projects/todoList/styles/output.css
+++ b/projects/todoList/styles/output.css
@@ -566,6 +566,17 @@ video {
 [hidden] {
   display: none;
 }
+
+*, ::before, ::after {
+	--tw-translate-x: 0;
+	--tw-translate-y: 0;
+	--tw-rotate: 0;
+	--tw-skew-x: 0;
+	--tw-skew-y: 0;
+	--tw-scale-x: 1;
+	--tw-scale-y: 1;
+	--tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .pointer-events-none {
 	pointer-events: none;
 }
@@ -581,6 +592,18 @@ video {
 }
 .right-4 {
 	right: 1rem;
+}
+.top-16 {
+	top: 4rem;
+}
+.top-\[-4rem\] {
+	top: -4rem;
+}
+.top-\[-5rem\] {
+	top: -5rem;
+}
+.m-4 {
+	margin: 1rem;
 }
 .mx-2 {
 	margin-left: 0.5rem;
@@ -605,6 +628,9 @@ video {
 .ml-2 {
 	margin-left: 0.5rem;
 }
+.ml-4 {
+	margin-left: 1rem;
+}
 .flex {
 	display: flex;
 }
@@ -620,9 +646,51 @@ video {
 .h-\[var\(--winHeight\)\] {
 	height: var(--winHeight);
 }
+.max-h-\[var\(--mainHeight\)\] {
+	max-height: var(--mainHeight);
+}
+.max-h-\[var\(--tHeight\)\] {
+	max-height: var(--tHeight);
+}
+.origin-bottom-left {
+	transform-origin: bottom left;
+}
+.origin-bottom {
+	transform-origin: bottom;
+}
+.scale-0 {
+	--tw-scale-x: 0;
+	--tw-scale-y: 0;
+	transform: var(--tw-transform);
+}
+.transform {
+	transform: var(--tw-transform);
+}
+.auto-rows-\[2rem\] {
+	grid-auto-rows: 2rem;
+}
+.grid-cols-\[1fr\2c max-content\] {
+	grid-template-columns: 1fr -webkit-max-content;
+	grid-template-columns: 1fr max-content;
+}
+.grid-cols-\[1fr\2c minmax\(80\%\2c auto\)\2c 1fr\] {
+	grid-template-columns: 1fr minmax(80%, auto) 1fr;
+}
+.grid-cols-\[1fr\2c minmax\{80\%\2c auto\}\2c 1fr\] {
+	grid-template-columns: 1fr minmax{80% auto} 1fr;
+}
+.grid-cols-\[1fr\2c 80\%\2c 1fr\] {
+	grid-template-columns: 1fr 80% 1fr;
+}
+.grid-cols-1 {
+	grid-template-columns: repeat(1, minmax(0, 1fr));
+}
 .grid-rows-\[max-content\2c 1fr\2c max-content\] {
 	grid-template-rows: -webkit-max-content 1fr -webkit-max-content;
 	grid-template-rows: max-content 1fr max-content;
+}
+.flex-row-reverse {
+	flex-direction: row-reverse;
 }
 .place-items-center {
 	place-items: center;
@@ -630,8 +698,20 @@ video {
 .justify-around {
 	justify-content: space-around;
 }
+.gap-1 {
+	gap: 0.25rem;
+}
+.overflow-scroll {
+	overflow: scroll;
+}
 .rounded {
 	border-radius: 0.25rem;
+}
+.rounded-md {
+	border-radius: 0.375rem;
+}
+.rounded-xl {
+	border-radius: 0.75rem;
 }
 .bg-gray-800 {
 	--tw-bg-opacity: 1;
@@ -645,8 +725,18 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(49, 46, 129, var(--tw-bg-opacity));
 }
+.bg-gray-700 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
+}
+.bg-transparent {
+	background-color: transparent;
+}
 .p-1 {
 	padding: 0.25rem;
+}
+.p-2 {
+	padding: 0.5rem;
 }
 .py-2 {
 	padding-top: 0.5rem;
@@ -667,6 +757,9 @@ video {
 .py-1 {
 	padding-top: 0.25rem;
 	padding-bottom: 0.25rem;
+}
+.text-left {
+	text-align: left;
 }
 .text-center {
 	text-align: center;
@@ -690,6 +783,11 @@ video {
 .text-gray-800 {
 	--tw-text-opacity: 1;
 	color: rgba(31, 41, 55, var(--tw-text-opacity));
+}
+.transition-transform {
+	transition-property: transform;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 150ms;
 }
 @media (min-width: 640px) {
 
